# CMake

./: .gitignore
HolaMundo/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  HolaMundo.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  hola.h  hola.h.in  main.cpp  main.vcxproj  main.vcxproj.filters
HolaMundo/my_lib/: CMakeLists.txt  MathFunctions.vcxproj  MathFunctions.vcxproj.filters  cmake_install.cmake
